tests/passes/well-formed/constant-ref-cell.expect
---STDERR---
Error: tests/passes/well-formed/constant-ref-cell.futil
9 |    ref m2 = std_const(2, 1);
  |    ^^^^^^^^^^^^^^^^^^^^^^^^ Malformed Structure: constant not allowed for ref cells
